# fmri-defaults-kb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVLOG.md  NOTICE  README.md  kb_integration_followups.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_kb_entry.md
.github/workflows/: ci.yml  release.yml
kb/pipelines/: README.md  ccs.yaml  cpac.yaml  fmriprep.yaml  hcp_minimal.yaml
schemas/: citation_flagmap.schema.json  date_version.schema.json  lab_fingerprint.schema.json  pipeline_registry.schema.json  tool_version.schema.json
scripts/: fetch_version_timeline.py  validate_kb.py
src/fmri_defaults_kb/: __init__.py  errors.py  io.py  registry.py  sentinels.py
tests/: conftest.py  test_fetch_version_timeline.py  test_registry.py  test_schemas_valid.py  test_smoke.py  test_validator.py
tests/fixtures/invalid/citations/: bad_doi.yaml
tests/fixtures/invalid/dates/: missing_column.csv
tests/fixtures/invalid/labs/: bad_confidence.yaml
tests/fixtures/invalid/pipelines/: missing_versions.yaml
tests/fixtures/invalid/tools/: missing_required.yaml
tests/fixtures/valid/citations/: example_citation.yaml
tests/fixtures/valid/dates/: example_tool.csv
tests/fixtures/valid/labs/: example_lab.yaml
tests/fixtures/valid/pipelines/: test_multi_version.yaml  test_singleton.yaml
tests/fixtures/valid/tools/: fmriprep_example.yaml
