[project]
name = "fmri-defaults-kb"
version = "0.0.1"
description = "A curated, versioned knowledge base of neuroimaging tool defaults, lab fingerprints, and methods-paper-to-flag mappings for fMRI preprocessing pipelines."
authors = [
    { name = "Jae Wook Cho", email = "jae7cho@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-jsonschema",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fmri_defaults_kb"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
files = ["src", "tests"]
# tests/conftest.py adds scripts/ to sys.path so test_validator can import the
# validate_kb script; mirror that for mypy's module resolution.
mypy_path = "scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
